# protibuild

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: deploy.yml  rust.yml
docs/: book.toml
docs/src/: Chemistry.md  Controls.md  Installation.md  Interface.md  Introduction.md  Projects.md  SUMMARY.md
protibuild/: Cargo.toml
protibuild/src/: lib.rs  main.rs  prelude.rs  world.rs
protibuild/src/chemistry/: mod.rs
protibuild/src/chemistry/amino_acids/: definitions.rs  mod.rs  types.rs
protibuild/src/chemistry/atoms/: mod.rs
protibuild/src/chemistry/rendering/: mod.rs
protibuild/src/config/: amino_acids.json  mod.rs
protibuild/src/objects/: dev_cube.rs  grid.rs  mod.rs
protibuild/src/projects/: mod.rs  objects.rs  templates.rs
protibuild/src/ui/: crosshair.rs  mod.rs  tab_bar.rs
protibuild/src/user/: camera.rs  interaction.rs  mod.rs
