[package]
name = "protibuild"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }
rapier3d = { version = "0.32", features = ["simd-stable"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
